--- a/css/style.css
+++ b/css/style.css
@@ -223,7 +223,7 @@ h6,
 }
 
 .bg-offer {
-    background: linear-gradient(rgba(18, 15, 45, .5), rgba(18, 15, 45, .5)), url(../img/office.jpg) top right no-repeat;
+    background: linear-gradient(rgba(18, 15, 45, .5), rgba(18, 15, 45, .5)), url(../img/officed.jpg) top right no-repeat;
     background-size: cover;
 }
 
